# travel-planner-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
data/: agent_checkpoints.sqlite
data/.pytest_tmp_runcheck/test_checkpoint_resume_updates0/: agent.sqlite
docs/destinations/: beijing.md  changsha.md  chengdu.md  dali.md  hangzhou.md  paris.md  suzhou.md  tokyo_family.md
src/travel_agent/: __init__.py  knowledge.py
src/travel_agent/agent/: __init__.py  cli.py  display.py  evaluation.py  graph.py  nodes.py  planner.py  prompts.py  reflection.py  schemas.py  state.py
src/travel_agent/conversation/: __init__.py  cli_repl.py  graph.py  nodes.py  prompts.py  slot_tracker.py  state.py
src/travel_agent/memory/: __init__.py  models.py  store.py
src/travel_agent/observability/: __init__.py  tracer.py
src/travel_agent/rag/: __init__.py  api.py  cli.py  config.py  embeddings.py  evaluation.py  keyword.py  langchain_adapters.py  loaders.py  manifest.py  metadata.py  models.py  query_rewrite.py  rerankers.py  service.py  splitters.py  vector_store.py
src/travel_agent/tools/: __init__.py  alternatives.py  budget.py  crowd.py
tests/: conftest.py  test_agent_graph.py  test_conversation.py  test_knowledge.py  test_memory.py  test_rag_pipeline.py  test_real_embeddings.py  test_recall_quality.py  test_tools.py
tests/fixtures/: agent_eval_cases.jsonl  rag_eval_cases.jsonl
travel_agent/: __init__.py
