[project]
name = "travel-agent"
version = "0.1.0"
description = "Local RAG foundation for a LangChain + LangGraph travel planning agent."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Travel Agent Team" }]
dependencies = [
    "chromadb>=0.4.22,<0.5",
    "langchain>=1.2",
    "langchain-community>=0.4",
    "langchain-core>=1.2",
    "langchain-openai>=1.0",
    "langchain-text-splitters>=1.1",
    "numpy>=1.24,<2",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pypdf>=4.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "rich>=14.0",
    "typer>=0.21",
]

[project.optional-dependencies]
observability = [
    "langfuse>=3.0",
    "langsmith>=0.4",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "mypy>=1.13",
]
local-embeddings = [
    "sentence-transformers>=3.0",
]

[project.scripts]
travel-rag = "travel_agent.rag.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/travel_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
files = ["src/travel_agent", "tests"]
